# python-web

./: pyproject.toml
fastapi-tutorial/: db.py  main.py  testrequest.py
fastapi-tutorial/static/: index.html
web-scraping/: main.py
