[tool.poetry]
name = "python-web"
version = "0.1.0"
description = ""
authors = ["VAlduinV <prime72w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
requests = "^2.32.3"
pydantic = {extras = ["email"], version = "^2.10.4"}
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
python-multipart = "^0.0.20"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
